--- a/XMUA/Teacher/Teacher.Master
+++ b/XMUA/Teacher/Teacher.Master
@@ -6,12 +6,25 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+    
+    <LINK REL="stylesheet" HREF="~/css/StyleTeacher.css" TYPE="text/css">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
         <div>
+             <div class="nav">
+             <ul class="navul">
+                 <li><a href="TeacherWelcome.aspx">Home</a></li>
+                 <li><a href="#">Course</a></li>
+                 <li><a href="#">Exam</a></li>
+                 <li><a href="#">Leave</a></li>
+                 <li><a href="#">Health Attendance</a></li>
+                 <li><a href="#">Chat</a></li>
+                 <li><a href="#">Personal Info</a></li>
+             </ul>
+        </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
