--- a/XMUA/Admin/Admin.Master
+++ b/XMUA/Admin/Admin.Master
@@ -18,10 +18,7 @@
                  <li><a href="AdminWelcome.aspx">Home</a></li>
                  <li><a href="#">Course</a></li>
                  <li><a href="#">Exam</a></li>
-                 <li><a href="#">Leave</a></li>
-                 <li><a href="#">Health Attendance</a></li>
-                 <li><a href="#">Chat</a></li>
-                 <li><a href="#">Personal Info</a></li>
+                 <li><a href="#">Leave Approval</a></li>
              </ul>
           </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
