--- a/XMUA/Student/Student.Master
+++ b/XMUA/Student/Student.Master
@@ -13,16 +13,17 @@
 </head>
 <body >
     <form id="form1" runat="server">
-
+        
         <div class="nav">
              <ul class="navul">
                  <li><a href="StudentWelcome.aspx">Home</a></li>
-                 <li><a href="#">Course</a></li>
-                 <li><a href="#">Exam</a></li>
-                 <li><a href="#">Leave</a></li>
-                 <li><a href="#">Health Attendance</a></li>
-                 <li><a href="#">Chat</a></li>
-                 <li><a href="#">Personal Info</a></li>
+                 <li><a href="CourseSelection.aspx">Course</a></li>
+                 <li><a href="ExamTime.aspx">Exam</a></li>
+                 <li><a href="Leave.aspx">Leave</a></li>
+                 <li><a href="Health.aspx">Health Attendance</a></li>
+                 <li><a href="ChatStudent.aspx">Chat</a></li>
+                 <li><a href="Info.aspx">Personal Info</a></li>
+                 <li><asp:LinkButton CssClass="LLB" ID="LinkButton1" runat="server" OnClick="LinkButton1_Click">Logout</asp:LinkButton></li>
              </ul>
         </div>
         <div >
