--- a/XMUA/css/StyleStudent.css
+++ b/XMUA/css/StyleStudent.css
@@ -1,6 +1,6 @@
-﻿body {
+﻿.body1 {
     font-family: Helvetica;
-    
+    background-image:url(../img/bg2.png);
 }
 .nav {
 
@@ -364,3 +364,28 @@
     .ccb2:hover {
         background-image: linear-gradient(to left, #92fe9d 0%, #00c9ff 100%);
     }
+.timetable {
+    border: 1px solid black;
+    ;
+    text-align: center;
+    border-collapse: collapse;
+    margin: 50px 0px 100px 400px;
+    width: 1100px;
+    height: 850px;
+}
+
+    .timetable .timetabletd1 {
+        width: 100px;
+        font-weight: bold;
+        font-size: 18px;
+    }
+
+.timetabletr1 {
+    line-height: 40px;
+    height: 40px;
+}
+
+.timetable .timetabletd {
+    width: 200px;
+    height: 200px;
+}
