--- a/XMUA/Student/Student.Master
+++ b/XMUA/Student/Student.Master
@@ -11,9 +11,11 @@
     </asp:ContentPlaceHolder>
 
 </head>
-<body class="body1" >
+<body class="body1">
     <form id="form1" runat="server">
-        
+       <div style="width:300px;height:100px;position:absolute;top:10px;">
+           <img style="width:300px" src="../img/XMUAlogo.jpg" />
+           </div>
         <div class="nav">
              <ul class="navul">
                  <li><a href="StudentWelcome.aspx">Home</a></li>
