--- a/XMUA/css/StyleStudent.css
+++ b/XMUA/css/StyleStudent.css
@@ -1,6 +1,6 @@
 ﻿.body1 {
     font-family: Helvetica;
-    background-image:url(../img/bg2.png);
+    background-image:url(../img/bg.png);
 }
 .nav {
 
@@ -149,17 +149,18 @@
             }
 
 .welcome {
-    background-color: #DCDCDC;
+    background-color: #c2e9fb;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 650px;
+    margin-top:70px;
 }
 .welcome:after{
     content:'';
     position:absolute;
     left:0;
-    top:115px;
+    top:154px;
     width:99.5%;
     height:650px;
     background-image:url(../img/study.jpg);
@@ -179,8 +180,8 @@
         display: flex;
         font-size: 90px;
         position: absolute;
-        top: 210px;
-        left: 250px;
+        top: 280px;
+        left: 235px;
         font-weight: bold;
         font-family: Helvetica;
         color: #000;
@@ -188,7 +189,7 @@
 
 .label2 {
 
-    margin-top: 140px;
+    margin-top: 110px;
     width: 100%;
     font-size: 20px;
     font-weight: bold;
