--- a/XMUA/Teacher/Teacher.Master
+++ b/XMUA/Teacher/Teacher.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Teacher.master.cs" Inherits="XMUA.Teacher.Teacher" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Teacher.master.cs" Inherits="XMUA.Teacher.Teacher1" %>
 
 <!DOCTYPE html>
 
@@ -6,24 +6,28 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
-    
     <LINK REL="stylesheet" HREF="~/css/StyleTeacher.css" TYPE="text/css">
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body class="body1">
     <form id="form1" runat="server">
         <div>
-             <div class="nav">
+            <div style="width:300px;height:100px;position:absolute;top:10px;">
+           <img style="width:300px" src="../img/XMUAlogo.jpg" />
+           </div>
+             <div class="nav" style=" margin-left: 700px;">
              <ul class="navul">
                  <li><a href="TeacherWelcome.aspx">Home</a></li>
-                 <li><a href="#">Course</a></li>
-                 <li><a href="#">Leave</a></li>
+                 <li><a href="TCourse.aspx">Course</a></li>
+                 <li><a href="TLeave.aspx">Leave</a></li>
+                 <li><asp:LinkButton CssClass="LLB" ID="LinkButton1" runat="server" OnClick="LinkButton1_Click">Logout</asp:LinkButton></li>
              </ul>
         </div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
         </div>
+
     </form>
 </body>
 </html>
