--- a/XMUA/css/StyleStudent.css
+++ b/XMUA/css/StyleStudent.css
@@ -339,6 +339,17 @@
     color:white;
 
 }
+.outDiv1 {
+    font-size: 20px;
+    margin: 10px 40px;
+    border-bottom: 1px dashed white;
+    color: white;
+}
+.outDiv1 .titleDiv {
+    font-size: 28px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
 .outDiv .titleDiv
 {
 
@@ -349,6 +360,10 @@
 .outbdiv {
     margin: 20px 40px;
     text-align:center;
+}
+.outbdiv1 {
+    margin: 0px 40px;
+    text-align: center;
 }
 .ccb2 {
     border: 0px;
@@ -390,3 +405,60 @@
     width: 200px;
     height: 200px;
 }
+
+.btn {
+    position: relative;
+    display: block;
+    color: black;
+    font-size: 20px;
+    font-family: "montserrat";
+    text-decoration: none;
+    margin: 30px 0;
+    border: 2px solid #4facfe;
+    padding: 14px 0px;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 1s all ease;
+}
+
+    .btn::before {
+        background: #4facfe;
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        z-index: -1;
+        transition: all 0.6s ease;
+    }
+
+.total::before {
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.total:hover::before {
+    height: 380%;
+}
+.approved::before {
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.approved:hover::before {
+    height: 380%;
+}
+
+.rejected::before {
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.rejected:hover::before {
+    height: 380%;
+}
+
+
