--- a/XMUA/css/StyleTeacher.css
+++ b/XMUA/css/StyleTeacher.css
@@ -80,7 +80,15 @@
     top: 100px;
     padding: 0;
 }
+.filter::before {
+    width: 100%;
+    height: 0%;
+    transform: translate(-50%,-50%) rotate(45deg);
+}
 
+.filter:hover::before {
+    height: 380%;
+}
 .sidenavul {
     font-size: 23px;
     margin-top: 20px;
@@ -235,6 +243,100 @@
     }
 }
 
+.pitable {
+    margin: 50px auto 0 auto;
+    width: 1050px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+}
+
+    .pitable .trtitle {
+        font-size: 30px;
+    }
+
+.septalline1 {
+    text-align: center;
+    border-bottom: 3px solid #00f2fe;
+    width: 1000px;
+    height: 5px;
+    position: relative;
+    left: 350px;
+}
+
+.septalline2 {
+    text-align: center;
+    border-bottom: 3px solid #4facfe;
+    width: 1000px;
+    height: 5px;
+    position: relative;
+    left: 350px;
+}
+
+.tbEdit {
+    font-size: 18px;
+    height: 30px;
+}
+
+    .tbEdit:focus {
+        border-color: #00f2fe;
+        box-shadow: 0 0 5px #4facfe;
+    }
+
+.ccb {
+    border: 0px;
+    width: 230px;
+    height: 40px;
+    font-size: 25px;
+    font-weight: bold;
+    color: white;
+    margin-top: 15px;
+    border-radius: 20px;
+    outline: none;
+    background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+}
+
+    .ccb:hover {
+        color: blue;
+    }
+
+.pitable2 {
+    margin: 50px auto 0 auto;
+    width: 800px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.pitable .trtitle .tdword {
+    font-size: 20px;
+    border-right: 2px solid black;
+    width: 400px;
+}
+
+.pitable .trtitle .tdinput1 {
+    height: 30px;
+    width: 300px;
+    font-size: 20px;
+}
+
+.pitable .trtitle .tdinput {
+    width: 400px;
+    text-align: center;
+}
+
+.hacontainer {
+    font-family: Helvetica;
+    height: 700px;
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    border-radius: 20px;
+    background-color: #4facfe;
+    box-shadow: 15px 15px 10px #0074FE;
+    overflow: hidden;
+    position: relative;
+    margin: 20px auto;
+}
 .h1title {
     font-size: 50px;
     text-align: center;
